--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit
-google-generativeai
-speechrecognition
-streamlit-mic-recorder
-gTTS
-pydub
-numpy
-soundfile
+streamlit==1.41.1
+google-generativeai==0.8.3
+gTTS==2.5.3
+SpeechRecognition==3.10.4
+streamlit-mic-recorder==0.0.8
+pydub==0.25.1
